* build.xml: Add a debian-source target     * Startup: Disable browser launch for debian daemon
Monotone-Parent: db0dec32aac852157904b9c201fc30ff44063d65
Monotone-Revision: 371c75e3de64de09968f28fc30687118040d886e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-29T13:41:40
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -776,6 +776,7 @@
         <echo message="... and mtn cert t:i2p-${release.number} branch i2p.i2p.release" />
     </target>
     <target name="debian">
+        <!-- binary only -->
         <echo message="Did you update the version in these files?" />
         <exec executable="ls" failonerror="true">
             <arg value="-l" />
@@ -784,6 +785,20 @@
         <echo message="====================" />
         <exec executable="dpkg-buildpackage" failifexecutionfails="true" >
             <arg value="-b" />
+        </exec>
+    </target>
+    <target name="debian-source">
+        <!-- bundle the 20MB jetty 5 lib since there probably isn't a deb for it -->
+        <ant dir="apps/jetty" target="verifyJettylib" />
+        <echo message="Did you update the version in these files?" />
+        <exec executable="ls" failonerror="true">
+            <arg value="-l" />
+            <arg value="debian/changelog" />
+        </exec>
+        <echo message="====================" />
+        <exec executable="dpkg-buildpackage" failifexecutionfails="true" >
+            <arg value="-S" />
+            <arg value="-I_MTN" />
         </exec>
     </target>
 </project>
