* Jetty: Turn on checkAliases
Monotone-Parent: 03d2cce8f7029faa6c867d377b5b116c0b8ec479
Monotone-Revision: 2af37d43b2926edeee7fbed01ec1eb185ab3a170

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-29T13:55:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -57,18 +57,23 @@ wrapper.java.library.path.2=$INSTALL_PATH/lib
 # Numbers must be consecutive (except for stripquotes)
 wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
-wrapper.java.additional.3=-Dorg.mortbay.util.FileResource.checkAliases=false
-wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
-wrapper.java.additional.5=-Di2p.dir.base="$INSTALL_PATH"
-wrapper.java.additional.5.stripquotes=TRUE
+wrapper.java.additional.3=-Dorg.mortbay.xml.XmlParser.NotValidating=true
+wrapper.java.additional.4=-Di2p.dir.base="$INSTALL_PATH"
+wrapper.java.additional.4.stripquotes=TRUE
+# Jetty says this is a security risk
+# Uncommenting this won't help as the router forces it to true
+# If you really need this, you have to set it in jetty.xml
+# somehow - not sure exactly but here's a clue:
+# org.mortbay.util.FileResource.setCheckAliases(false)
+# wrapper.java.additional.5=-Dorg.mortbay.util.FileResource.checkAliases=false
 # PORTABLE installation:
 # uncomment the following
-#wrapper.java.additional.6=-Di2p.dir.pid="$INSTALL_PATH"
+#wrapper.java.additional.5=-Di2p.dir.pid="$INSTALL_PATH"
+#wrapper.java.additional.5.stripquotes=TRUE
+#wrapper.java.additional.6=-Di2p.dir.temp="$INSTALL_PATH"
 #wrapper.java.additional.6.stripquotes=TRUE
-#wrapper.java.additional.7=-Di2p.dir.temp="$INSTALL_PATH"
+#wrapper.java.additional.7=-Di2p.dir.config="$INSTALL_PATH"
 #wrapper.java.additional.7.stripquotes=TRUE
-#wrapper.java.additional.8=-Di2p.dir.config="$INSTALL_PATH"
-#wrapper.java.additional.8.stripquotes=TRUE
 #
 # Uncomment this for better performance.
 # If it doesn't work, server mode is not available in your JVM.
