fix for missing tgz build error
Monotone-Parent: 62203a2657af5d772f8eb878a39e70807780b5de
Monotone-Revision: 2b1a99ea78270f80514ced3860a7d54cc3f2e309

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-31T20:26:57
Monotone-Branch: i2p.i2p

--- a/apps/jetty/build.xml
+++ b/apps/jetty/build.xml
@@ -42,7 +42,12 @@
         <get src="${jetty.url}" verbose="true" dest="${jetty.filename}" />
     </target>
 
-    <uptodate property="verified.already" srcfile="${jetty.filename}" targetfile="${verified.filename}" />
+    <condition property="verified.already" >
+        <and>
+            <available file="${jetty.filename}" />
+            <uptodate property="foo.bar.baz" srcfile="${jetty.filename}" targetfile="${verified.filename}" />
+        </and>
+    </condition>
 
     <target name="verifyJettylib" unless="verified.already" >
         <condition property="jetty.zip.verified" >
