- Pull jstl.jar and standard.jar out of susidns.war (-300KB someday)       - Remove duplicate classes from i2psnark.war (100KB)
Monotone-Parent: ce3e26cd690e18a18afddd7c79841b2b09750c4a
Monotone-Revision: c184d0f41c7cb23f324fcacf2af43d9689225b6a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-06T18:44:29

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -53,7 +53,8 @@
      -->
     <target name="war" depends="jar, bundle"> 
         <war destfile="../i2psnark.war" webxml="../web.xml">
-          <classes dir="./build/obj" includes="**/*.class" excludes="**/RunStandalone.class" />
+          <!-- include only the web stuff, as of 0.7.12 the router will add i2psnark.jar to the classpath for the war -->
+          <classes dir="./build/obj" includes="**/web/*.class" />
         </war>
     </target>
     
