move jrobin from routerconsole.jar to its own jar
Monotone-Parent: 5831da20b756ee7b76638a606381ba45804775e4
Monotone-Revision: e60e22441e97da2057dc87c19a79e225a63de8d5

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-06T20:48:14

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -64,13 +64,15 @@
     <target name="jar" depends="compile">
         <jar destfile="./build/routerconsole.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
-                <attribute name="Class-Path" value="i2p.jar router.jar" />
+                <attribute name="Class-Path" value="i2p.jar router.jar jrobin-1.4.0.jar" />
             </manifest>
         </jar>
         <delete dir="./tmpextract" />
+       <!-- jrobin taken out of routerconsole.jar in 0.7.12
         <unjar src="../../jrobin/jrobin-1.4.0.jar" dest="./tmpextract" />
         <jar destfile="./build/routerconsole.jar" basedir="./tmpextract" update="true" />
         <delete dir="./tmpextract" />
+       -->
         
         <ant target="war" />
 
