take version number off jrobin jar so we can overwrite if we upgrade
Monotone-Parent: b45956602e430e0660f8387c2386790b1b431bbd
Monotone-Revision: 0af71f0e61232a0c84213b87266d00a94f0856e3

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-10T12:06:30

--- a/build.xml
+++ b/build.xml
@@ -314,8 +314,8 @@
         <copy file="build/org.mortbay.jetty.jar" todir="pkg-temp/lib/" />
         <copy file="build/router.jar" todir="pkg-temp/lib/" />
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
-        <!-- pulled out of routerconsole.jar in 0.7.12 -->
-        <copy file="apps/jrobin/jrobin-1.4.0.jar" todir="pkg-temp/lib/" />
+        <!-- pulled out of routerconsole.jar in 0.7.12; name without version so we can overwrite if we upgrade  -->
+        <copy file="apps/jrobin/jrobin-1.4.0.jar" tofile="pkg-temp/lib/jrobin.jar" />
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/BOB.jar" todir="pkg-temp/lib/" />
         <copy file="build/systray.jar" todir="pkg-temp/lib" />
@@ -490,7 +490,8 @@
         <copy file="build/streaming.jar" todir="pkg-temp/lib/" />
         <copy file="build/routerconsole.jar" todir="pkg-temp/lib/" />
         <!-- pulled out of routerconsole.jar in 0.7.12, someday we can take out of updater -->
-        <copy file="apps/jrobin/jrobin-1.4.0.jar" todir="pkg-temp/lib/" />
+        <!-- name without version so we can overwrite if we upgrade  -->
+        <copy file="apps/jrobin/jrobin-1.4.0.jar" tofile="pkg-temp/lib/jrobin.jar" />
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
