--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -64,7 +64,8 @@
     <target name="jar" depends="compile">
         <jar destfile="./build/routerconsole.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
-                <attribute name="Class-Path" value="i2p.jar router.jar jrobin-1.4.0.jar" />
+                <!-- top level installer will rename to jrobin.jar -->
+                <attribute name="Class-Path" value="i2p.jar router.jar jrobin.jar" />
             </manifest>
         </jar>
         <delete dir="./tmpextract" />
