fix missing readme files in debian
Monotone-Parent: f421fc9d4feb25fea94ccccacae6c8f36286f6bc
Monotone-Revision: 59e8e9a6621993b1672a95bb80b7038956dd8f16

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-10T13:45:31
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -440,7 +440,7 @@
     </target>
     <target name="prepconsoleDocs" depends="prepgeoupdate">
         <copy todir="pkg-temp/docs/" >
-          <fileset dir="." includes="readme*.html" />
+          <fileset dir="installer/resources/readme/" includes="readme*.html" />
           <fileset dir="installer/resources/proxy" />
         </copy>
     </target>
