* Unzip: Any files in the zip with a .jar.pack or .war.pack extension       will be transparently unpacked with unpack200. Savings is about 60%.       Someday we will do this for suds, but we can do it for xpi2ps now.     * build: Add updater200 target
Monotone-Parent: 9b5fef26ef0d755230bb967f585e245f5e1172dd
Monotone-Revision: 224ab7b7658526cfe99af6d915725eb69b440636

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-02-23T02:44:47
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -451,6 +451,8 @@
     <target name="consoleDocs" depends="deletepkg-temp, prepconsoleDocs">
         <zip destfile="docs.zip" basedir="pkg-temp" whenempty="fail" />
     </target>
+
+    <target name="updater200" depends="prepupdate, preplicenses, pack200, zipit" />
     <target name="updater" depends="prepupdate, preplicenses, zipit" />
     <target name="updaterWithGeoIP" depends="prepupdate, prepgeoupdate, preplicenses, zipit" />
     <target name="updaterWithJetty" depends="prepjupdate, preplicenses, zipit" />
@@ -460,7 +462,19 @@
     <target name="updaterRouter" depends="prepupdateRouter, zipit" />
     <target name="zipit">
         <zip destfile="i2pupdate.zip" basedir="pkg-temp" whenempty="fail" />
+       <!-- just a test, makes almost no difference
+        <tar destfile="i2pupdate.tgz" basedir="pkg-temp" compression="gzip" />
+        <tar destfile="i2pupdate.tbz" basedir="pkg-temp" compression="bzip2" />
+       -->
     </target>
+    <target name="pack200">
+        <exec executable="sh" failifexecutionfails="true">
+            <arg value="-c" />
+            <!-- pack200 will only pack to a .pack file, and only from a .jar file, so we put another .jar on the end -->
+            <arg value="for i in pkg-temp/lib/*.jar pkg-temp/webapps/*war; do echo pack200 $i; mv $i $i.jar; pack200 -g $i.pack $i.jar; rm -f $i.jar; done" />
+        </exec>
+    </target>
+
     <target name="updateTest" depends="prepupdate">
         <ant dir="core/java/" target="jarTest" />    
         <copy file="core/java/build/i2ptest.jar" todir="pkg-temp/lib" />
