updates after trying SDK 2.1
Monotone-Parent: 46d5004940954cc420688d5e921d056f64ec0e1e
Monotone-Revision: 4bac96626432ea12afa2ae31b3551f9d5e1d7fb4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-03-05T13:48:26
Monotone-Branch: i2p.i2p

--- a/android/build.xml
+++ b/android/build.xml
@@ -113,6 +113,10 @@
         <delete file="${external-libs-folder}/crypto.jar" />
     </target>
 
+    <!-- fix for property name change sometime after SDK 1.5 -->
+    <property name="android-jar" value="${android.jar}" />
+    <property name="android-aidl" value="${android.aidl}" />
+
     <!--
          ================================================================================
          From here down copied from SDK platforms/android-1.1/templates/android_rules.xml
