back to updater
Monotone-Parent: c295ab421dd719cfe0e273268b5b4e48505e4f61
Monotone-Revision: 97a16a11a0fa27c0fa44df062573a51af938e068

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-04-14T14:05:25

--- a/build.xml
+++ b/build.xml
@@ -255,8 +255,7 @@
 	<defaultexcludes default="true"/>
     </target>
 
-    <!-- A few reeleases only, then back to updater. First release was 0.7.11 -->
-    <target name="pkg" depends="distclean, updaterWithJettyFixes, preppkg, installer" />
+    <target name="pkg" depends="distclean, updater, preppkg, installer" />
 
     <target name="pkgclean" depends="deletepkg-temp">
         <delete>
